--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://mylibrary-bucket"
   },
   "eslintConfig": {
     "extends": "react-app"
