--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "aws s3 sync build/ s3://mylibrary-bucket"
+    "deploy": "aws s3 sync build/ s3://mylibrary.cool"
   },
   "eslintConfig": {
     "extends": "react-app"
